// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GSuitePurchaseCta it renders GSuitePurchaseCta with basic plan 1`] = `
<EmailVerificationGate
  noticeStatus="is-info"
  noticeText="You must verify your email to purchase G Suite."
>
  <div
    className="card is-compact"
  >
    <header
      className="g-suite-purchase-cta__add-google-apps-card-header"
    >
      <h3
        className="g-suite-purchase-cta__add-google-apps-card-product-logo"
      >
        <strong>
          G Suite
        </strong>
      </h3>
    </header>
  </div>
  <div
    className="card is-compact"
  >
    <div
      className="g-suite-purchase-cta__add-google-apps-card-product-details"
    >
      <div
        className="g-suite-purchase-cta__add-google-apps-card-description"
      >
        <h2
          className="g-suite-purchase-cta__add-google-apps-card-title"
        >
          Professional email and so much more.
        </h2>
        <p
          className="g-suite-purchase-cta__add-google-apps-card-sub-title"
        >
          We've partnered with Google to offer you email, storage, docs, calendars, and more integrated with your site.
        </p>
        <div
          className="g-suite-purchase-cta__add-google-apps-card-price"
        >
          <h4
            className="g-suite-purchase-cta__add-google-apps-card-price-per-user"
          >
            <span>
              <strong>
                $5
              </strong>
               per user / month
            </span>
          </h4>
          <button
            className="button form-button is-primary"
            locale="en"
            onClick={[Function]}
            type="button"
          >
            Add G Suite
          </button>
          <h5
            className="g-suite-purchase-cta__add-google-apps-card-billing-period"
          >
            $50 billed yearly (2 months free!)
          </h5>
        </div>
      </div>
      <div
        className="g-suite-purchase-cta__add-google-apps-card-logos"
      >
        <img
          alt="G Suite Logo"
          src="/calypso/images/g-suite/g-suite.svg"
        />
      </div>
    </div>
  </div>
  <div
    className="card is-compact"
  >
    <div
      className="g-suite-purchase-cta__add-google-apps-card-features"
    >
      <div
        className="g-suite-purchase-cta__add-google-apps-card-feature"
      >
        <div
          className="g-suite-purchase-cta__add-google-apps-card-feature-block"
        >
          <img
            alt="Gmail Logo"
            src="/calypso/images/g-suite/logo_gmail_48dp.svg"
          />
        </div>
        <div
          className="g-suite-purchase-cta__add-google-apps-card-feature-block"
        >
          <h5
            className="g-suite-purchase-cta__add-google-apps-card-feature-header"
          >
            Gmail for @example.com
          </h5>
          <p>
            Professional ad-free email that works with most email clients.
          </p>
        </div>
      </div>
      <div
        className="g-suite-purchase-cta__add-google-apps-card-feature"
      >
        <div
          className="g-suite-purchase-cta__add-google-apps-card-feature-block"
        >
          <img
            alt="Google Drive Logo"
            src="/calypso/images/g-suite/logo_drive_48dp.svg"
          />
        </div>
        <div
          className="g-suite-purchase-cta__add-google-apps-card-feature-block"
        >
          <h5
            className="g-suite-purchase-cta__add-google-apps-card-feature-header"
          >
            Keep all your files secure
          </h5>
          <p>
            Get 30GB of storage for all your files synced across devices.
          </p>
        </div>
      </div>
      <div
        className="g-suite-purchase-cta__add-google-apps-card-feature"
      >
        <div
          className="g-suite-purchase-cta__add-google-apps-card-feature-block"
        >
          <img
            alt="Google Docs Logo"
            src="/calypso/images/g-suite/logo_docs_48dp.svg"
          />
        </div>
        <div
          className="g-suite-purchase-cta__add-google-apps-card-feature-block"
        >
          <h5
            className="g-suite-purchase-cta__add-google-apps-card-feature-header"
          >
            Docs, spreadsheets and forms
          </h5>
          <p>
            Create and edit documents to get your work done faster.
          </p>
        </div>
      </div>
      <div
        className="g-suite-purchase-cta__add-google-apps-card-feature"
      >
        <div
          className="g-suite-purchase-cta__add-google-apps-card-feature-block"
        >
          <img
            alt="Google Hangouts Logo"
            src="/calypso/images/g-suite/logo_hangouts_48dp.svg"
          />
        </div>
        <div
          className="g-suite-purchase-cta__add-google-apps-card-feature-block"
        >
          <h5
            className="g-suite-purchase-cta__add-google-apps-card-feature-header"
          >
            Connect with your team
          </h5>
          <p>
            Use text chats, voice calls, or video calls, with built in screen sharing
          </p>
        </div>
      </div>
    </div>
    <div
      className="g-suite-purchase-cta__add-google-apps-card-secondary-button"
    >
      <button
        className="button form-button is-primary"
        locale="en"
        onClick={[Function]}
        type="button"
      >
        Add G Suite
      </button>
    </div>
    <div
      className="g-suite-purchase-cta__add-google-apps-card-learn-more"
    >
      <p>
        <strong>
          No setup or software required.
        </strong>
         
        <a
          className="g-suite-purchase-cta__add-google-apps-card-learn-more-link"
          href="https://en.support.wordpress.com/adding-g-suite-to-your-site"
          onClick={[Function]}
          rel="noopener noreferrer"
          target="_blank"
        >
          Learn more about integrating G Suite with your site.
        </a>
      </p>
    </div>
  </div>
</EmailVerificationGate>
`;

exports[`GSuitePurchaseCta it renders GSuitePurchaseCta with business plan 1`] = `
<EmailVerificationGate
  noticeStatus="is-info"
  noticeText="You must verify your email to purchase G Suite."
>
  <div
    className="card is-compact"
  >
    <header
      className="g-suite-purchase-cta__add-google-apps-card-header"
    >
      <h3
        className="g-suite-purchase-cta__add-google-apps-card-product-logo"
      >
        <strong>
          G Suite
        </strong>
        Business
      </h3>
    </header>
  </div>
  <div
    className="card is-compact"
  >
    <div
      className="g-suite-purchase-cta__add-google-apps-card-product-details"
    >
      <div
        className="g-suite-purchase-cta__add-google-apps-card-description"
      >
        <h2
          className="g-suite-purchase-cta__add-google-apps-card-title"
        >
          Professional email and so much more.
        </h2>
        <p
          className="g-suite-purchase-cta__add-google-apps-card-sub-title"
        >
          We've partnered with Google to offer you email, storage, docs, calendars, and more integrated with your site.
        </p>
        <div
          className="g-suite-purchase-cta__add-google-apps-card-price"
        >
          <h4
            className="g-suite-purchase-cta__add-google-apps-card-price-per-user"
          >
            <span>
              <strong>
                $5
              </strong>
               per user / month
            </span>
          </h4>
          <button
            className="button form-button is-primary"
            locale="en"
            onClick={[Function]}
            type="button"
          >
            Add G Suite
          </button>
          <h5
            className="g-suite-purchase-cta__add-google-apps-card-billing-period"
          >
            $50 billed yearly (2 months free!)
          </h5>
        </div>
      </div>
      <div
        className="g-suite-purchase-cta__add-google-apps-card-logos"
      >
        <img
          alt="G Suite Logo"
          src="/calypso/images/g-suite/g-suite.svg"
        />
      </div>
    </div>
  </div>
  <div
    className="card is-compact"
  >
    <div
      className="g-suite-purchase-cta__add-google-apps-card-features"
    >
      <div
        className="g-suite-purchase-cta__add-google-apps-card-feature"
      >
        <div
          className="g-suite-purchase-cta__add-google-apps-card-feature-block"
        >
          <img
            alt="Gmail Logo"
            src="/calypso/images/g-suite/logo_gmail_48dp.svg"
          />
        </div>
        <div
          className="g-suite-purchase-cta__add-google-apps-card-feature-block"
        >
          <h5
            className="g-suite-purchase-cta__add-google-apps-card-feature-header"
          >
            Gmail for @example.com
          </h5>
          <p>
            Professional ad-free email that works with most email clients.
          </p>
        </div>
      </div>
      <div
        className="g-suite-purchase-cta__add-google-apps-card-feature"
      >
        <div
          className="g-suite-purchase-cta__add-google-apps-card-feature-block"
        >
          <img
            alt="Google Drive Logo"
            src="/calypso/images/g-suite/logo_drive_48dp.svg"
          />
        </div>
        <div
          className="g-suite-purchase-cta__add-google-apps-card-feature-block"
        >
          <h5
            className="g-suite-purchase-cta__add-google-apps-card-feature-header"
          >
            Keep all your files secure
          </h5>
          <p>
            Get 30GB of storage for all your files synced across devices.
          </p>
        </div>
      </div>
      <div
        className="g-suite-purchase-cta__add-google-apps-card-feature"
      >
        <div
          className="g-suite-purchase-cta__add-google-apps-card-feature-block"
        >
          <img
            alt="Google Docs Logo"
            src="/calypso/images/g-suite/logo_docs_48dp.svg"
          />
        </div>
        <div
          className="g-suite-purchase-cta__add-google-apps-card-feature-block"
        >
          <h5
            className="g-suite-purchase-cta__add-google-apps-card-feature-header"
          >
            Docs, spreadsheets and forms
          </h5>
          <p>
            Create and edit documents to get your work done faster.
          </p>
        </div>
      </div>
      <div
        className="g-suite-purchase-cta__add-google-apps-card-feature"
      >
        <div
          className="g-suite-purchase-cta__add-google-apps-card-feature-block"
        >
          <img
            alt="Google Hangouts Logo"
            src="/calypso/images/g-suite/logo_hangouts_48dp.svg"
          />
        </div>
        <div
          className="g-suite-purchase-cta__add-google-apps-card-feature-block"
        >
          <h5
            className="g-suite-purchase-cta__add-google-apps-card-feature-header"
          >
            Connect with your team
          </h5>
          <p>
            Use text chats, voice calls, or video calls, with built in screen sharing
          </p>
        </div>
      </div>
    </div>
    <div
      className="g-suite-purchase-cta__add-google-apps-card-secondary-button"
    >
      <button
        className="button form-button is-primary"
        locale="en"
        onClick={[Function]}
        type="button"
      >
        Add G Suite
      </button>
    </div>
    <div
      className="g-suite-purchase-cta__add-google-apps-card-learn-more"
    >
      <p>
        <strong>
          No setup or software required.
        </strong>
         
        <a
          className="g-suite-purchase-cta__add-google-apps-card-learn-more-link"
          href="https://en.support.wordpress.com/adding-g-suite-to-your-site"
          onClick={[Function]}
          rel="noopener noreferrer"
          target="_blank"
        >
          Learn more about integrating G Suite with your site.
        </a>
      </p>
    </div>
  </div>
</EmailVerificationGate>
`;
